<resources>
    <string name="app_name" translatable="false">WikiMario</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="character">Personaje</string>
    <string name="skills">Habilidades</string>
    <string name="description">Descripción</string>
    <string name="acerca_de">Acerca de...</string>
    <string name="men">Menú</string>
    <string name="wikimario">WikiMario</string>
    <string name="app_desarrollada">"Aplicación desarrollada por Fernando Lago. Versión 1.0."</string>
    <string name="accept">Aceptar</string>
    <string name="seleccionado">Seleccionado: Acerca de</string>
    <string name="elegir">Elige un personaje:</string>
    <string name="mario_name">Mario</string>
    <string name="descripton_mario">El héroe principal del Reino Champiñón</string>
    <string name="skills_mario">Mario utiliza su poderosa habilidad para saltar y una gran cantidad de mejoras para enfrentarse a su archienemigo, Bowser.</string>
    <string name="luigi_name">Luigi</string>
    <string name="description_luigi">Hermano de Mario y héroe del Reino Champiñón</string>
    <string name="skills_luigi">Luigi es más alto y puede saltar más alto que Mario.</string>
    <string name="peach_name">Peach</string>
    <string name="description_peach">La querida princesa del Reino Champiñón.</string>
    <string name="skills_peach">La princesa Peach siempre está lista para participar en una gran variedad de deportes, y también le encanta hornear y cocinar.</string>
    <string name="toad_name">Toad</string>
    <string name="description_toad">Residente del Reino Champiñón, trabaja al servicio de la Princesa Peach.</string>
    <string name="skills_toad">Toad es muy alegre y leal. Hace todo lo posible por ayudar a Mario y a Luigi en sus esfuerzos por proteger el Reino Champiñón de Bowser.</string>
    <string name="welcome">Bienvenidos al mundo de Mario</string>
    <string name="mostrar_toast">"Se ha seleccionado el personaje "</string>
    <string name="inicio">Inicio</string>
    <string name="ajustes">Ajustes</string>
    <string name="multiidiomas">Español / Inglés</string>
    <string name="navigation_drawer_open">Abrir menú de navegación</string>
    <string name="navigation_drawer_close">Cerrar menú de navegación</string>
    <string name="cambiar_de_idioma">Cambiar de idioma</string>
    <string name="vacio">" "</string>

</resources>