<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentSettings"
    android:orientation="vertical">

    <TextView
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ajustes"
        android:layout_gravity="center"
        android:textSize="40sp"
        android:layout_marginTop="40dp"
        android:theme="@style/CharacterNameText"/>

    <TextView
        android:id="@+id/text_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cambiar_de_idioma"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="20dp"/>

    <Switch
        android:id="@+id/switch_language"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/multiidiomas"
        tools:ignore="UseSwitchCompatOrMaterialXml"
        android:layout_marginHorizontal="20dp"/>


</LinearLayout>