<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentDetails"
    android:orientation="vertical">



    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:layout_marginTop="50dp"
        android:theme="@style/CharacterNameText"/>
    <ImageView
        android:id="@+id/image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_launcher_background"
        android:layout_marginTop="20dp"/>


    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        android:theme="@style/CharacterDescriptionText"/>

    <TextView
        android:id="@+id/skills"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skills"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        android:theme="@style/CharacterSkillsText"/>



</LinearLayout>